# libspatialx

./: CMakeLists.txt  LICENSE  README.md
spatialx/: fixed_level_index.cc  fixed_level_index.h  index_base.cc  index_base.h  rocks_storage.cc  rocks_storage.h  spatial_query.cc  spatial_query.h  status.h  storage.h  utils.h
